objects/Opportunity_Category__c.object
<CustomObject>
    <description>Platforms &amp; Service associated to an Opportunity</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Categories</relationshipLabel>
        <relationshipName>Opportunity_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Get Complete List of LOVs - Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get Complete List of LOVs - Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Category</label>
    <nameField>
        <displayFormat>OC-{0000}</displayFormat>
        <label>Opportunity Category</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>